# TSASoftwareDev2024

./: .firebaserc  .gitignore  CNAME  README.md  api.yaml  firebase.json
.firebase/: hosting.ZnJvbnRlbmRcb3V0.cache
backend/: pyproject.toml
frontend/: .pretterrc.json  App.tsx  app.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js
frontend/components/: appbar.tsx  bottom-nav.tsx  page.tsx  section.tsx
frontend/controller/: api.ts  index.ts  podcast.ts  server.ts  user.ts
frontend/lib/firebase/: chat.ts  firebase.ts  recommnd.ts
frontend/lib/state/: index.ts  status.ts  user.ts
frontend/model/: state.ts
frontend/pages/: _app.tsx  _document.tsx  consel.tsx  counsel.tsx  index.tsx  login.tsx  mindcasts.tsx  recipes.tsx  settings.tsx  story.tsx
frontend/public/: manifest.json
frontend/styles/: globals.css
frontend/view/: login.tsx
