[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yubo Cao <cao2006721@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-httpauth = "^4.8.0"
werkzeug = "^3.0.1"
sqlalchemy = "^2.0.24"
undetected-chromedriver = "^3.5.4"
selenium-wire = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
